--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         System.import('app').catch(function(err){ console.error(err); });
       
       });
-      spaceifyStartInit(true);
+      //new SpaceifyInitalize().start(true);
     </script>
 
   </head>
