Removed compiled js & js.map files from "app" dir and changed tsconfig to compile them in "dist" directory. Refactored app.component to use app.component.css instead of style.css. Moved assets from "app" dir to "assets" directory.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         //window.angularComponentRef.zone.run(() => {window.angularComponentRef.component.spaceifyReady();});
 
 
-        System.import('app').catch(function(err){ console.error(err); });
+        System.import('dist').catch(function(err){ console.error(err); });
       
       });
       //new SpaceifyInitalize().start(true);
