--- a/offlineDebug.html
+++ b/offlineDebug.html
@@ -34,7 +34,7 @@
     <script>
     
 
-    System.import('app').catch(function(err){ console.error(err); });
+    System.import('dist').catch(function(err){ console.error(err); });
       
       /*
       window.addEventListener("spaceifyReady", function()
