--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html ng-app-spaceify>
+<html ng-app-spaceify spaceify-secure>
   <head>
     <title>Spaceify Appstore</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">    
