--- a/offlineDebug.html
+++ b/offlineDebug.html
@@ -33,7 +33,7 @@
 
     <script>
     
-
+    var OFFLINE = true;
     System.import('dist').catch(function(err){ console.error(err); });
       
       /*
