--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>Spaceify Appstore</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">    
     <link rel="stylesheet" href="styles.css">
+    
 
     <script src="../../libs/spaceifyinitialize.js"> </script>
 
@@ -30,6 +31,7 @@
        //System.import('app').catch(function(err){ console.error(err); });
     </script>
 
+    <script>document.write('<base href="' + document.location + '" />');</script>
 
     <script>
     
