--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
     <title>Spaceify Appstore</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">    
     <link rel="stylesheet" href="styles.css">
-    
+
+    <link href="node_modules/@angular2-material/core/style/core.css" rel="stylesheet">
+    <link href="node_modules/@angular2-material/core/overlay/overlay.css" rel="stylesheet">
+    <link href="material-icons.css" rel="stylesheet">    
 
     <script src="../../libs/spaceifyinitialize.js"> </script>
 
@@ -12,9 +15,6 @@
     <script src="node_modules/core-js/client/shim.min.js"></script>
     <script src="node_modules/zone.js/dist/zone.js"></script>
     <script src="node_modules/reflect-metadata/Reflect.js"></script>
-    
-
-
 
     <script src="node_modules/systemjs/dist/system.src.js"></script>
 
