--- a/offlineDebug.html
+++ b/offlineDebug.html
@@ -3,7 +3,10 @@
     <title>Spaceify Appstore</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">    
     <link rel="stylesheet" href="styles.css">
-    
+
+    <link href="node_modules/@angular2-material/core/overlay/overlay.css" rel="stylesheet">
+    <link href="material-icons.css" rel="stylesheet">    
+
     <!-- <script src="../../libs/spaceifyinitialize.js"> </script> -->
 
     <!-- 1. Load libraries -->
