Implemented most of new layout.

--- a/app/intro.html
+++ b/app/intro.html
@@ -1,6 +1,23 @@
 
-<h1>Welcome</h1>
+<nav class="menu_container">
+	<a class="menu_topic" routerLink="/install" routerLinkActive="navActive">INSTALL</a>
+	<a class="menu_topic" routerLink="/manage" routerLinkActive="navActive">MANAGE</a>
 
-<p>This is the Appstore for your Spaceify Edge Node.</p>
+	<!-- <div id="search_bar" class="search_bar">
+		<input type="search" id="search" placeholder="Search" #search (keyup.enter)="doSearch(search.value)">
+	</div> -->
+	<br class="menu_clear" />
+</nav>
 
-<p>Here you can install new apps and manage them.</p>
+<div id="large_background" class="large_background1">
+	<div>awd awd awd awdawdw daw dwad awd awdawd awd
+	</div>
+</div>
+
+<div id="page_content" class="page_content">
+	<h1>Welcome</h1>
+
+	<p>This is the Appstore for your Spaceify Edge Node.</p>
+
+	<p>Here you can install new apps and manage them.</p>
+</div>
