--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@
 
   <!-- 3. Display the application -->
   <body>
-    <my-app>Loading...</my-app>
+    <my-app><div id="loadingTemporary">Loading...</div></my-app>
   </body>
 </html>
