--- a/app/intro.html
+++ b/app/intro.html
@@ -9,15 +9,14 @@
 	<br class="menu_clear" />
 </nav>
 
-<div id="large_background" class="large_background1">
-	<div>awd awd awd awdawdw daw dwad awd awdawd awd
+<div id="large_background" class="large_background large_background2">
+	<div class="content">
+		<h1>This is the Appstore for your Spaceify Edge Node.</h1>
+		<div>Here you can install new apps and manage them.</div>
 	</div>
 </div>
+<div class="large_background_footer">&nbsp;</div>
 
 <div id="page_content" class="page_content">
-	<h1>Welcome</h1>
-
-	<p>This is the Appstore for your Spaceify Edge Node.</p>
-
-	<p>Here you can install new apps and manage them.</p>
+&nbsp;
 </div>
