Fixed issue with too wide layout and visual layout of servermessages listing.

--- a/app/intro.html
+++ b/app/intro.html
@@ -18,5 +18,7 @@
 <div class="large_background_footer">&nbsp;</div>
 
 <div id="page_content" class="page_content">
-&nbsp;
+	<div id="page_content_inner" class="page_content_inner">
+		&nbsp;
+	</div>
 </div>
