--- a/app/intro.html
+++ b/app/intro.html
@@ -1,13 +1,18 @@
 
+<!--
 <nav class="menu_container">
 	<a class="menu_topic" routerLink="/install" routerLinkActive="navActive">STORE</a>
 	<a class="menu_topic" routerLink="/manage" routerLinkActive="navActive">INSTALLED APPLICATIONS</a>
 
-	<!-- <div id="search_bar" class="search_bar">
+	//<!- 
+		<div id="search_bar" class="search_bar">
 		<input type="search" id="search" placeholder="Search" #search (keyup.enter)="doSearch(search.value)">
-	</div> -->
+	</div> 
+	//->
 	<br class="menu_clear" />
 </nav>
+
+-->
 
 <div id="large_background" class="large_background large_background2">
 	<div class="content">
