Taiga issue 97, fixed search

--- a/app/intro.html
+++ b/app/intro.html
@@ -13,6 +13,7 @@
 </nav>
 
 -->
+<contextbar></contextbar>
 
 <div id="large_background" class="large_background large_background2">
 	<div class="content">
