Fixed appstore crash when installed app cannot be found from spaceify.org

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="node_modules/@angular2-material/core/overlay/overlay.css" rel="stylesheet">
     <link href="material-icons.css" rel="stylesheet">    
 
-    <script src="../../js/spaceify.app.js"> </script>
+    <script src="../../js/spaceify.app.unpacked.js"> </script>
 
     <!-- 1. Load libraries -->
     <!-- IE required polyfills, in this exact order -->
