spaceify.app.js -> spaceify.api.js

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<link sp_href="material-icons.css" rel="stylesheet">    
 
 		<script src="../js/spaceify.loader.bundle.js"></script>
-		<script spe_src="js/spaceify.app.bundle.js"></script>
+		<script spe_src="js/spaceify.api.js"></script>
 
 		<!-- 1. Load libraries -->
 		<!-- IE required polyfills, in this exact order -->
