--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<link sp_href="node_modules/@angular2-material/core/overlay/overlay.css" rel="stylesheet">
 		<link sp_href="material-icons.css" rel="stylesheet">    
 
-		<script src="../js/spaceify.loader.bundle.js"></script>
+		<script src="../js/spaceify.loader.js"></script>
 		<script spe_src="js/spaceify.api.js"></script>
 
 		<!-- 1. Load libraries -->
