--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 		<link sp_href="node_modules/@angular2-material/core/overlay/overlay.css" rel="stylesheet">
 		<link sp_href="material-icons.css" rel="stylesheet">    
 
-		<script src="../js/spaceify.loader.js"></script>
-		<script spe_src="js/spaceify.api.js"></script>
+		<script src="libs/spaceify.loader.js"></script>
+		<script spe_src="libs/spaceify.api.js"></script>
 
 		<!-- 1. Load libraries -->
 		<!-- IE required polyfills, in this exact order -->
@@ -28,7 +28,7 @@
 		<!-- 2. Configure SystemJS -->
 		<script sp_src="systemjs.config.js"></script>
 
-		<script sp_src="../js/void.js"></script>
+		<script sp_src="libs/void.js"></script>
 
 		<script>
 
