--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
-<html spaceify-secure>
+<!doctype html>
+<html sp-SE>
 	<head>
 		<title>Spaceify Appstore</title>
+
+		<style>
+			#loadingTemporary {
+			width: 100%;
+			height: 100%;
+			background-color: #fff;
+			padding: 2em;
+			font-size: 1.5em;
+			}
+		</style>
+		
 		<meta name="viewport" content="width=device-width, initial-scale=1">    
 		<link rel="stylesheet" sp_href="assets/fonts/roboto/roboto.base64.css">
 		<link rel="stylesheet" sp_href="styles.css">
@@ -28,13 +40,13 @@
 		<!-- 2. Configure SystemJS -->
 		<script sp_src="systemjs.config.js"></script>
 
-		<script sp_src="libs/void.js"></script>
-
 		<script>
 
 		window.addEventListener("spaceifyReady", function()
 			{ // Injection is ready
-			console.log("index: load");
+			console.log("index: loaded");
+
+			window.document.getElementById("loadingTemporary").style.color = "#888";
 
 			System.import('app').then(function(m){console.log(m)}).catch(function(err){ console.error(err); });
 			});
@@ -46,6 +58,10 @@
 
 	<!-- 3. Display the application -->
 	<body>
-		<my-app><div id="loadingTemporary">Loading...</div></my-app>
+		<my-app>
+			<div id="loadingTemporary" style="color: transparent;">
+				Loading...
+			</div>
+		</my-app>
 	</body>
 </html>
