Spaceify 0.7.1 compatibility update #2

--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html spaceify-login>
+<html sp-LG>
 	<head body-directive>
 		<!-- -->
 		<meta charset="utf-8">
@@ -17,7 +17,7 @@
 
 		<!-- -->
 		<script src="libs/spaceify.loader.js"></script>
-		<script spe_src="libs/spaceify.edge.js"></script>
+		<script spe_src="libs/spaceify.edge.bundle.js"></script>
 		<!-- -->
 
 		<script>
