Log Out feature

--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
 		<!-- -->
 
 		<!-- -->
-		<script src="libs/spaceify.loader.js"></script>
+		<script src="libs/spaceify.loader.bundle.js"></script>
 		<script spe_src="libs/spaceify.edge.bundle.js"></script>
 		<!-- -->
 
@@ -66,7 +66,7 @@
 		<div class="topBar">
 			<a class="topBarLogoLink" routerLink="/intro"><img spe_src="images/icon-80p.png" alt="" /></a>
 			<div class="topBarLogoText">Spaceify Edge</div>
-			<a class="topBarPageLink" onclick="net.loadLaunchPage(); return false;"><img spe_src="images/launchpage.png" alt="" /></a>
+			<a class="topBarPageLink" onclick="net.loadLaunchPage(); return false;"><img spe_src="images/launchpage.png" alt="" title="{{ getString('admin/login', 'backtolaunchpage') }}" /></a>
 		</div>
 
 		<div class="large_background_footer">&nbsp;</div>
