--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 		<link sp_href="node_modules/@angular2-material/core/overlay/overlay.css" rel="stylesheet">
 		<link sp_href="material-icons.css" rel="stylesheet">    
 
-		<script src="libs/spaceify.loader.bundle.js"></script>
-		<script spe_src="libs/spaceify.api.bundle.js"></script>
+		<script src="libs/spaceify.loader.js"></script>
+		<script spe_src="libs/spaceify.api.js"></script>
 
 		<!-- 1. Load libraries -->
 		<!-- IE required polyfills, in this exact order -->
