--- a/login.html
+++ b/login.html
@@ -16,8 +16,8 @@
 		<!-- -->
 
 		<!-- -->
-		<script src="libs/spaceify.loader.js"></script>
-		<script spe_src="libs/spaceify.edge.js"></script>
+		<script src="libs/spaceify.loader.bundle.js"></script>
+		<script spe_src="libs/spaceify.edge.bundle.js"></script>
 		<!-- -->
 
 		<script>
@@ -77,7 +77,7 @@
 
 				<div class="adminLogo">
 					<span class="adminLogoHelper"></span>
-					<img sp_src="assets/logotext.png" class="adminLogoImage" width="291" height="100"
+					<img sp_src="assets/images/logotext.png" class="adminLogoImage" width="291" height="100"
 						onclick="net.loadLaunchPage();">
 				</div>
 
@@ -99,7 +99,7 @@
 
 		<div id="footer" class="footer">
 			<div class="footerContentLeft">
-				<img id="32pxc" sp_src="assets/by-nc-nd_eu.png" width="91" height="32">
+				<img id="32pxc" sp_src="assets/images/by-nc-nd_eu.png" width="91" height="32">
 			</div>
 			<div class="footerContentLeft">
 				<span>{{  getString('global', 'copyright') }}</span>
