--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 		
 		<meta name="viewport" content="width=device-width, initial-scale=1">    
 		<link rel="stylesheet" sp_href="assets/fonts/roboto/roboto.base64.css">
-		<link rel="stylesheet" sp_href="styles.css">
+		<link rel="stylesheet" sp_href="assets/css/styles.css">
 
 		<link sp_href="node_modules/@angular2-material/core/style/core.css" rel="stylesheet">
 		<link sp_href="node_modules/@angular2-material/core/overlay/overlay.css" rel="stylesheet">
-		<link sp_href="material-icons.css" rel="stylesheet">    
+		<link sp_href="assets/css/material-icons.css" rel="stylesheet">    
 
-		<script src="libs/spaceify.loader.js"></script>
-		<script spe_src="libs/spaceify.api.js"></script>
+		<script src="libs/spaceify.loader.bundle.js"></script>
+		<script spe_src="libs/spaceify.api.bundle.js"></script>
 
 		<!-- 1. Load libraries -->
 		<!-- IE required polyfills, in this exact order -->
