--- a/offlineDebug.html
+++ b/offlineDebug.html
@@ -2,10 +2,10 @@
 	<head>
 		<title>Spaceify Appstore</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">    
-		<link rel="stylesheet" href="styles.css">
+		<link rel="stylesheet" href="assets/css/styles.css">
 
 		<link href="node_modules/@angular2-material/core/overlay/overlay.css" rel="stylesheet">
-		<link href="material-icons.css" rel="stylesheet">    
+		<link href="assets/css/material-icons.css" rel="stylesheet">    
 
 		<!-- <script src="../../libs/spaceifyinitialize.js"> </script> -->
 
