--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" spe_href="fonts/roboto/roboto.base64.css">
 		<link rel="stylesheet" spe_href="css/spaceify.edge.css" type="text/css">
 
-		<title ng-bind="$root.getString('admin/login', 'title')">Loading...</title>
+		<title ng-bind="$root.getString('login', 'title')">Loading...</title>
 		<!-- -->
 
 		<!-- -->
@@ -66,7 +66,7 @@
 		<div class="topBar">
 			<a class="topBarLogoLink" routerLink="/intro"><img spe_src="images/icon-80p.png" alt="" /></a>
 			<div class="topBarLogoText">Spaceify Edge</div>
-			<a class="topBarPageLink" onclick="net.loadLaunchPage(); return false;"><img spe_src="images/launchpage.png" alt="" title="{{ getString('admin/login', 'backtolaunchpage') }}" /></a>
+			<a class="topBarPageLink" onclick="net.loadLaunchPage(); return false;"><img spe_src="images/launchpage.png" alt="" title="{{ getString('login', 'backtolaunchpage') }}" /></a>
 		</div>
 
 		<div class="large_background_footer">&nbsp;</div>
@@ -82,12 +82,12 @@
 				</div>
 
 				<div class="adminInputContainer">
-					<input class="adminInput" style="width: 200px" type="password" name="password" id="password" placeholder="{{ getString('admin/login', 'password') }}"/>
+					<input class="adminInput" style="width: 200px" type="password" name="password" id="password" placeholder="{{ getString('login', 'password') }}"/>
 				</div>
 
 				<div class="adminInputContainer">
 					<button class="adminButton normal" name="operation" onclick="logIn();">
-						{{ getString("admin/login", "login") }}
+						{{ getString("login", "login") }}
 					</button>
 				</div>
 
