--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html sp-LG>
+<html>
 	<head body-directive>
 		<!-- -->
 		<meta charset="utf-8">
@@ -17,8 +17,8 @@
 		<!-- -->
 
 		<!-- -->
-		<script src="libs/spaceify.loader.js"></script>
-		<script spe_src="libs/spaceify.edge.js"></script>
+		<script src="libs/spaceify.loader.bundle.js"></script>
+		<script spe_src="libs/spaceify.edge.bundle.js"></script>
 		<!-- -->
 
 		<script>
@@ -32,10 +32,7 @@
 			net = new SpaceifyNet();
 			sam = new SpaceifyApplicationManager();
 
-			if(window.location.protocol == "http:")
-				$("#securitywarningcontainer").show();
-			else
-				$("#logincontainer").show();
+			$("#logincontainer").show();
 
 			$("#edgeBody").show();
 			$("#password").val("").focus();
@@ -78,21 +75,6 @@
 		<div class="large_background_footer">&nbsp;</div>
 
 		<div id="contentContainer" class="edgeContentContainer">
-
-			<!-- SECURITY WARNING CONTAINER -->
-			<div class="edgeContainer" id="securitywarningcontainer" style="display: none;">
-
-				<div class="edgeInfo warning">
-					{{ getString("global", "security_warning") }}
-
-					<p>
-					<button class="edgeButton inrow" onclick="net.loadSecurePage();">
-						{{ getString("global", "btn_reload") }}
-					</button>
-				</div>
-				<div class="breaker"></div>
-
-			</div>
 
 			<!-- LOGIN CONTAINER -->
 			<div class="edgeContainer login" id="logincontainer" style="display: none;">
