--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 		<link sp_href="node_modules/@angular2-material/core/overlay/overlay.css" rel="stylesheet">
 		<link sp_href="assets/css/material-icons.css" rel="stylesheet">
 
-		<script src="libs/spaceify.loader.bundle.js"></script>
-		<script spe_src="libs/spaceify.api.bundle.js"></script>
+		<script src="libs/spaceify.loader.js"></script>
+		<script spe_src="libs/spaceify.api.js"></script>
 		<script spe_src="libs/spaceify.locales.js"></script>
 
 		<!-- 1. Load libraries -->
