--- a/security.html
+++ b/security.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" spe_href="css/spaceify.edge.css" type="text/css">
 		<link rel="stylesheet" spe_href="css/styles.css" type="text/css">
 
-		<title ng-bind="$root.getString('login', 'title')">Loading...</title>
+		<title>Loading...</title>
 		<!-- -->
 
 		<!-- -->
@@ -24,15 +24,15 @@
 		<script>
 		var net;
 		var spdom;
-		var spaceifyApp = null;
+		var lang = null;
 
 		window.addEventListener("spaceifyReady", function()
 			{
-			spaceifyApp = new SpaceifyApp();
-			angular.bootstrap(document, ["spaceifyApp"]);
-
 			net = new SpaceifyNet();
 			spdom = new SpaceifyDOM();
+			lang = new SpaceifyLanguage();
+
+			lang.processDocument("edgeBody", "data-language", {title: {section: "security", index: "title"}});
 
 			var url = "https://" + window.location.hostname + "/";
 			spaceifyLoader.loadResource("location.conf", 80, url, url, function(result)
@@ -48,12 +48,12 @@
 		</script>
 	</head>
 
-	<body id="edgeBody" ng-controller="bodyController" body-directive style="display: none;">
+	<body id="edgeBody" style="display: none;">
 
 		<div class="topBar">
 			<a class="topBarLogoLink" routerLink="/intro"><img spe_src="images/icon-80p.png" alt="" /></a>
 			<div class="topBarLogoText">Spaceify Edge</div>
-			<a class="topBarPageLink" onclick="net.loadLaunchPage(); return false;"><img spe_src="images/launchpage.png" alt="" title="{{ getString('login', 'back_to_launchpage') }}" /></a>
+			<a class="topBarPageLink" onclick="net.loadLaunchPage(); return false;"><img spe_src="images/launchpage.png" alt="" data-language="title>global.back_to_launchpage" /></a>
 		</div>
 
 		<div class="large_background_footer">&nbsp;</div>
@@ -64,31 +64,26 @@
 			<div id="securitywarning" class="edgeContainer" style="display: none;">
 
 				<div class="edgeInfo warning">
-					{{ getString("global", "security_warning") }}
+
+					<span data-language="global.security_warning"></span>
 
 					<p>
-					<button class="edgeButton inrow" onclick="net.loadSecurePage();">
-						{{ getString("global", "btn_reload") }}
-					</button>
+					<button class="edgeButton inrow" data-language="global.btn_reload" onclick="net.loadSecurePage();"></button>
 				</div>
 				<div class="breaker"></div>
 
 			</div>
 
 			<!-- CERTIFICATE ERROR -->
-			<div id="certificateerror" class="edgeInfo" style="display: none; margin: 0px 10px 0px 10px;">
-
-				{{ getString("global", "certificate_error") }}
+			<div id="certificateerror" class="edgeInfo crtErr" style="display: none;">
+				<span data-language="global.certificate_error"></span>
 
 				<p>
-				<button class="edgeButton inrow" onclick="net.loadCertificate();">{{ getString("global", "btn_install") }}</button>
-				<button class="edgeButton inrow" onclick="net.loadSecurePage();">{{ getString("global", "btn_reload") }}</button>
+				<button class="edgeButton inrow" data-language="global.btn_install" onclick="net.loadCertificate();"></button>
+				<button class="edgeButton inrow" data-language="global.btn_reload" onclick="net.loadSecurePage();"></button>
+
 				<div class="breaker"></div>
-
-				<div class="edgeSmallInfo">
-					{{ getString("global", "delete_certificate") }}
-				</div>
-
+				<div class="edgeSmallInfo" data-language="global.delete_certificate"></div>
 			</div>
 			<div class="breaker"></div>
 
@@ -100,9 +95,8 @@
 			<div class="footerContentLeft">
 				<img id="32pxc" sp_src="assets/images/by-nc-nd_eu.png" width="91" height="32">
 			</div>
-			<div class="footerContentLeft">
-				<span>{{  getString('global', 'copyright') }}</span>
-			</div>
+
+			<div class="footerContentLeft" data-language="global.copyright"></div>
 		</div>
 
 	</body>
