Compatible with latest Edge update

--- a/login.html
+++ b/login.html
@@ -83,7 +83,7 @@
 
 			<div class="topBarLogoText" data-language="global.edge"></div>
 
-			<img spe_src="images/launchpage.png" onclick="net.loadLaunchPage();" class="topBarPopMenu" alt="" data-language="title>global.back_to_launchpage" />
+			<img spe_src="images/homepage.png" onclick="net.loadHomepage();" class="topBarPopMenu" alt="" data-language="title>global.back_to_homepage" />
 
 		</div>
 
@@ -97,7 +97,7 @@
 				<div class="loginLogo">
 					<span class="loginLogoHelper"></span>
 					<img sp_src="assets/images/logotext.png" class="loginLogoImage" width="291" height="100"
-						onclick="net.loadLaunchPage();">
+						onclick="net.loadHomepage();">
 				</div>
 
 				<div class="loginInputContainer">
