--- a/app/intro.html
+++ b/app/intro.html
@@ -16,7 +16,7 @@
 
 <div id="large_background" class="large_background" sp_bgnd="assets/images/store_background2-300p.jpg">
 	<div class="content">
-		<h1>This is the Appstore for your Spaceify Edge Node.</h1>
+		<h1>This is the AppStore for your Spaceify Edge Node.</h1>
 		<div>Here you can install new apps and manage them.</div>
 	</div>
 </div>
